--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "taylor-portfolio",
   "version": "0.0.0",
   "description": "Taylor McIntyre's Portfolio",
-  "main": "web.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
