--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-html-build": "~0.3.1"
   },
   "dependencies": {
-    "crawlme": "0.0.6"
+    "crawlme": "0.0.6",
+    "request": "~2.33.0"
   }
 }
